# test_web_scraping_by_python

./: README.md  pyproject.toml
secrets_json/: set_your_json_file_here.txt  settings.json
src/web_scraping/: gspshi.py  main.py
