[tool.poetry]
name = "web-scraping"
version = "0.1.0"
description = ""
authors = ["GENtoMAT <maclocosmos.glandcros@gmail.com>"]
readme = "README.md"
packages = [{include = "web_scraping", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.27.1"
icecream = "^2.1.3"
gspread = "^6.1.4"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.154.0"
oauth2client = "^4.1.3"
gspread-formatting = "^1.2.0"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.web_scraping.main:main"
